--- a/DotNetCoreSqlDb/Views/Todos/Create.cshtml
+++ b/DotNetCoreSqlDb/Views/Todos/Create.cshtml
@@ -28,6 +28,11 @@
                 <span asp-validation-for="Priority" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Owner" class="control-label"></label>
+                <input asp-for="Owner" class="form-control" />
+                <span asp-validation-for="Owner" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
