--- a/DotNetCoreSqlDb/Views/Todos/Index.cshtml
+++ b/DotNetCoreSqlDb/Views/Todos/Index.cshtml
@@ -18,6 +18,12 @@
             <th>
                 @Html.DisplayNameFor(model => model.CreatedDate)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Priority)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Owner)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -30,6 +36,12 @@
             <td>
                 @Html.DisplayFor(modelItem => item.CreatedDate)
             </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Priority)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Owner)
+                </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
